--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yvonne-portfolio-2022",
   "version": "0.1.0",
-  "homepage": "https://caseymm.github.io/yvonne-portfolio",
+  "homepage": "https://yvonneeadon.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
